--- a/locales/ny/common.json
+++ b/locales/ny/common.json
@@ -208,7 +208,7 @@
     "female": "Wamkazi",
     "back": "Bwererani",
     "next": "Patsogolo",
-    "preferedLanguage": "Chilankhulo chokondeka",
+    "preferredLanguage": "Chilankhulo chokondeka",
     "search": "Sakani apa..."
   },
   "greeting": {
