--- a/locales/tum/common.json
+++ b/locales/tum/common.json
@@ -208,7 +208,7 @@
     "female": "Mwanakazi",
     "back": "Welerani",
     "next": "Panthazi",
-    "preferedLanguage": "Chiyowoyero chakukhumbika",
+    "preferredLanguage": "Chiyowoyero chakukhumbika",
     "search": "Penjani apa..."
   },
   "greeting": {
